--- a/public/lab/index.html
+++ b/public/lab/index.html
@@ -8,7 +8,7 @@
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-  <link rel="import" href="../paper-card.html">
+  <link rel="import" href="../bower_components/paper-card/paper-card.html">
 
   <style is="custom-style">
     body {
