--- a/public/lab/crimson/crimson-fetch-element.html
+++ b/public/lab/crimson/crimson-fetch-element.html
@@ -1,8 +1,8 @@
-<link rel="import" href="bower_components/firebase-element/firebase-collection.html">
-<link rel="import" href="bower_components/firebase-element/firebase-document.html">
-      <link rel="import" href="bower_components/paper-card/paper-card.html">
-<link rel="import" href="bower_components/paper-button/paper-button.html">
-<link rel="import" href="bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="../../bower_components/firebase-element/firebase-document.html">
+<link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-input/paper-input.html">
 
 <dom-module id="crimson-fetch-element">
   <template>
