--- a/public/beta-profile.html
+++ b/public/beta-profile.html
@@ -149,7 +149,7 @@
                 alert("Invalid Session");
             }
             else{
-                console.login('Session valid. Go on & send profile request for '+res.userId+'...');
+                console.log('Session valid. Go on & send profile request for '+res.userId+'...');
                 this.sendProfileRequest(res.userId);
             }
         },
