Issue : Calling incorrect API

--- a/public/beta-profile.html
+++ b/public/beta-profile.html
@@ -123,7 +123,7 @@
         
         sendProfileRequest:function(userid){
             console.log("sendProfileRequest");
-            this.$.profileajax.url = 'https://m25lazi.herokuapp.com/api/alpha/'+userid;
+            this.$.profileajax.url = 'https://m25lazi.herokuapp.com/api/alpha/user/'+userid;
             this.$.profileajax.generateRequest();
         },
         
