Issue : profile not updating
checking response from incorrect ajax request

--- a/public/beta-profile.html
+++ b/public/beta-profile.html
@@ -156,7 +156,7 @@
         
         onProfileResponse:function(e){
             console.log("onProfileResponse");
-            console.log(this.$.sessioncheckajax.lastResponse);
+            console.log(this.$.profileajax.lastResponse);
             /*
                 {"status" : 1,"userId" : userid, "username" : user.getUsername(), "email": user.getEmail(), "devices" : {} }
                 {"status" : 0, "error" : error}
