--- a/public/betalogin.html
+++ b/public/betalogin.html
@@ -16,7 +16,7 @@
             margin-right: 20px;
 			font-family: 'Roboto',sans-serif;
 			font-size: 20px;
-            background-color: #CDDC39;
+            background-color: #FF9800;
             color: white;
 		}
         :root {
@@ -24,7 +24,7 @@
         --paper-input-container-color: white;
 
         /* Label and underline color when the input is focused */
-        --paper-input-container-focus-color: #AEEA00;
+        --paper-input-container-focus-color: #E65100;
 
         /* Label and underline color when the input is invalid
         --paper-input-container-invalid-color: green;*/
