--- a/public/beta-add-device.html
+++ b/public/beta-add-device.html
@@ -119,7 +119,7 @@
             console.log(this.$.sessioncheckajax.lastResponse);
             var res = this.$.sessioncheckajax.lastResponse;
             if(res.status == 0 ){
-                alert("Already Logged in");
+                alert("Not Logged in");
             }
             else{
                 $("#mainwrapper").show();
