--- a/public/beta-device-data.html
+++ b/public/beta-device-data.html
@@ -8,7 +8,7 @@
 
 <link rel="import" href="beta-device-data-element.html">
 
-<dom-module id="beta-add-device" >
+<dom-module id="beta-device-data" >
 <template>
 <style>
 
@@ -50,7 +50,7 @@
 
 <script>
 	Polymer({
-		is:"beta-add-device",
+		is:"beta-device-data",
         ready: function(){
             /*
                 Check Session token before going forward.
