--- a/public/beta-login.html
+++ b/public/beta-login.html
@@ -96,8 +96,10 @@
             var res = this.$.betaacceptajax.lastResponse;
             if(res.status == 0 )
                 alert(res.error);
-            else
-                alert("SUCCESS");
+            else{
+                console.log('Login success. Redirecting to profile page');
+                window.location.replace("https://m25lazi.herokuapp.com/betaprofile.html");
+            }
         },
         
         onSessionResponse:function(e){
