--- a/public/beta-device-data.html
+++ b/public/beta-device-data.html
@@ -20,7 +20,7 @@
     }
 </style>
             <div id="mainwrapper">
-            <beta-logout-ribbon.html id="logoutribbon"></beta-logout-ribbon.html>
+            <beta-logout-ribbon id="logoutribbon"></beta-logout-ribbon>
             
                 
             </div>
