--- a/public/beta-logout-ribbon.html
+++ b/public/beta-logout-ribbon.html
@@ -16,6 +16,7 @@
     }
 	</style>
             <div id="mainribbon">
+                <div>.</div>
                 <paper-button on-click="onLogoutPressed">Logout</paper-button>
             </div>
     
