--- a/public/beta-logout-ribbon.html
+++ b/public/beta-logout-ribbon.html
@@ -14,10 +14,14 @@
         margin-top: 20px;
         float : right;
     }
+    #blank{
+        width: 30px;
+        height: 20px;
+    }
 	</style>
             <div id="mainribbon">
-                <div>.</div>
                 <paper-button on-click="onLogoutPressed">Logout</paper-button>
+                <div id='blank'></div>
             </div>
     
         <iron-ajax
