--- a/public/betadevicedata.html
+++ b/public/betadevicedata.html
@@ -78,7 +78,7 @@
         
         
         <div class="desc">
-            <paper-button on-click=""><iron-icon icon="chevron-left"></iron-icon>Back</paper-button>
+            <paper-button on-click="window.location.replace('https://m25lazi.herokuapp.com/betaprofile.html');"><iron-icon icon="chevron-left"></iron-icon>Back</paper-button>
             <br>
             Data sent by the device selected. No filters are currently available in this build. Latest 100 values are stored and shown. 
         </div>
