--- a/public/betadevicedata.html
+++ b/public/betadevicedata.html
@@ -78,7 +78,7 @@
         
         
         <div class="desc">
-            <paper-button onclick="openProfile()"></iron-icon>Profile</paper-button>
+            <paper-button onclick="openProfile()"><iron-icon icon="chevron-left"></iron-icon>Profile</paper-button>
             <br>
             Data sent by the device selected. No filters are currently available in this build. Latest 100 values are stored and shown. 
         </div>
