--- a/public/beta-accept.html
+++ b/public/beta-accept.html
@@ -37,7 +37,7 @@
                 <input is="iron-input"  value={{activationcode::change}}>
             </paper-input-container>
             
-            <paper-button class="submit" on-click="submitForm">Submit</paper-button>
+            <paper-button class="submit" on-click="submitForm">JOIN US!</paper-button>
             </div>
     
         <iron-ajax
