--- a/public/beta-add-device.html
+++ b/public/beta-add-device.html
@@ -109,8 +109,10 @@
             var res = this.$.createdeviceajax.lastResponse;
             if(res.status == 0 )
                 alert(res.error);
-            else
-                alert("SUCCESS");
+            else{
+                console.log('opening profile');
+                window.location.replace("https://m25lazi.herokuapp.com/betaprofile.html");
+            }
         },
         
         onSessionResponse:function(e){
