--- a/public/betadeviceadd.html
+++ b/public/betadeviceadd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Invite</title>
+	<title>Add Device</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
