--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
                 <span id="nameintro" data-text="i am "></span>
                 <span id="name" class="brown" data-text="lazim mohammed"></span> <br>
                 <span id="intro" data-text="23 years old developer from "></span>
-                <a id="incredible" class=" brown links" href="http://incredibleindia.org/" target="_blank" data-text="india"></a>
+                <a id="incredible" class=" brown links" href="https://incredibleindia.org/" target="_blank" data-text="india"></a>
             </div> <br>   
             <div>
                 <span id="workintro" data-text="i work in iOS r&d at "></span>
-                <a id='airwatch' class="brown links"  href="https://air-watch.com" target="_blank" data-text="airwatch by vmware"></a> <br>
+                <a id='airwatch' class="brown links"  href="https://air-watch.com" target="_blank" data-text="vmware airwatch"></a> <br>
                 <span id ="workend" data-text="where we design and build emm, enterprise grade productivity apps for cross platform mobile devices"></span>
             </div> <br>
             <div>
